Bug 1209252: add buttons to clear session and signaling logs. r=jib, r=sicking